// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Choice Grouped 1`] = `
<div
  className="choice__Wrapper-sc-1k1omlp-0 ipFFxj"
>
  <select
    aria-label="ARIA label"
    className="choice__Select-sc-1k1omlp-1 zxzDb"
    onChange={[Function]}
  >
    <optgroup
      label="Group 1"
    >
      <option>
        Option 1
      </option>
      <option>
        Option 2
      </option>
    </optgroup>
    <optgroup
      label="Group 2"
    >
      <option>
        Option 3
      </option>
      <option>
        Option 4
      </option>
    </optgroup>
  </select>
  <i
    className="far fa-chevron-down"
  />
</div>
`;

exports[`Storyshots Choice Simple 1`] = `
<div
  className="choice__Wrapper-sc-1k1omlp-0 ipFFxj"
>
  <select
    aria-label="ARIA label"
    className="choice__Select-sc-1k1omlp-1 zxzDb"
    onChange={[Function]}
  >
    <option>
      Option 1
    </option>
    <option>
      Option 2
    </option>
  </select>
  <i
    className="far fa-chevron-down"
  />
</div>
`;

exports[`Storyshots Choice Some Disabled 1`] = `
<div
  className="choice__Wrapper-sc-1k1omlp-0 ipFFxj"
>
  <select
    aria-label="ARIA label"
    className="choice__Select-sc-1k1omlp-1 zxzDb"
    onChange={[Function]}
  >
    <option
      disabled={true}
    >
      Option 1
    </option>
    <option>
      Option 2
    </option>
  </select>
  <i
    className="far fa-chevron-down"
  />
</div>
`;

exports[`Storyshots Choices Normal 1`] = `
<div
  className="choices__Container-sc-800kf9-0 dJhxcL"
>
  <span
    className="choices__Text-sc-800kf9-1 bhMwJj"
  >
    I am a
  </span>
  <div
    className="choice__Wrapper-sc-1k1omlp-0 ipFFxj"
  >
    <select
      aria-label="Position"
      className="choice__Select-sc-1k1omlp-1 zxzDb"
      onChange={[Function]}
    >
      <optgroup
        label="Engineering"
      >
        <option>
          Front End Engineer I
        </option>
        <option>
          Front End Engineer II
        </option>
        <option>
          Front End Engineer III
        </option>
        <option>
          Senior Front End Engineer
        </option>
        <option>
          Lead Front End Engineer
        </option>
        <option>
          Back End Engineer I
        </option>
        <option>
          Back End Engineer II
        </option>
        <option>
          Back End Engineer III
        </option>
        <option>
          Senior Back End Engineer
        </option>
        <option>
          Lead Back End Engineer
        </option>
        <option>
          DevOps Engineer I
        </option>
        <option>
          DevOps Engineer II
        </option>
        <option>
          DevOps Engineer III
        </option>
        <option>
          Senior DevOps Engineer
        </option>
        <option>
          Lead DevOps Engineer
        </option>
      </optgroup>
      <optgroup
        label="Customer Success"
      >
        <option>
          Customer Success Champion I
        </option>
        <option>
          Customer Success Champion II
        </option>
        <option>
          Senior Customer Success Champion
        </option>
        <option>
          Lead Customer Success Champion
        </option>
      </optgroup>
      <optgroup
        label="Administration"
      >
        <option>
          Office assistant
        </option>
      </optgroup>
    </select>
    <i
      className="far fa-chevron-down"
    />
  </div>
  <span
    className="choices__Text-sc-800kf9-1 bhMwJj"
  >
    and have been 
    an engineer
     in the Sparksuite family for
  </span>
  <div
    className="choice__Wrapper-sc-1k1omlp-0 ipFFxj"
  >
    <select
      aria-label="Tenure"
      className="choice__Select-sc-1k1omlp-1 zxzDb"
      onChange={[Function]}
      value="less than one year"
    >
      <option
        disabled={false}
      >
        less than one year
      </option>
      <option
        disabled={false}
      >
        one to two years
      </option>
      <option
        disabled={true}
      >
        two to three years
      </option>
      <option
        disabled={true}
      >
        three to four years
      </option>
      <option
        disabled={true}
      >
        four to five years
      </option>
      <option
        disabled={true}
      >
        five to six years
      </option>
      <option
        disabled={true}
      >
        more than six years
      </option>
    </select>
    <i
      className="far fa-chevron-down"
    />
  </div>
</div>
`;

exports[`Storyshots Compensation Normal 1`] = `
<div
  className="container__Container-sc-8aaowj-0 bfnNcc"
>
  <figure
    className="figure__Container-sc-1fhptnd-0 bpKHsn"
    style={
      Object {
        "fontSize": "1rem",
      }
    }
  >
    <div
      className="figure__Amount-sc-1fhptnd-2 jVeOqW"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      $88,000
    </div>
    <figcaption
      className="figure__Subtitle-sc-1fhptnd-3 dUqReg"
    >
      ANNUAL SALARY
    </figcaption>
  </figure>
  <div
    className="divider__LineBox-sc-1mhowia-0 cbAUvB"
  >
    <div
      className="divider__Text-sc-1mhowia-1 iWWUCr"
    >
      plus
    </div>
  </div>
  <div
    className="compensation__FlexDiv-sc-1127ja8-0 ciacxP"
  >
    <div>
      <figure
        className="figure__Container-sc-1fhptnd-0 bpKHsn"
        style={
          Object {
            "fontSize": "0.8rem",
          }
        }
      >
        <div
          className="figure__Amount-sc-1fhptnd-2 jVeOqW"
          style={
            Object {
              "color": "#67b1d6",
            }
          }
        >
          50%
        </div>
        <figcaption
          className="figure__Subtitle-sc-1fhptnd-3 dUqReg"
        >
          OF BASE HEALTH PLAN PREMIUM
          <a
            aria-label="Learn more"
            href="https://handbook.sparksuite.com/benefits/health.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i
              className="far fa-info-circle"
            />
          </a>
        </figcaption>
      </figure>
      <p>
        Company contribution of 50% of the cost of your base health plan’s premium toward any of the health plans offered. We also offer vision and dental plans, plus
         
        <span
          className="compensation__AvoidLineBreakWithin-sc-1127ja8-1 gHGKlE"
        >
          HSAs and FSAs
        </span>
         to help reduce your taxes.
      </p>
    </div>
    <div>
      <figure
        className="figure__Container-sc-1fhptnd-0 bpKHsn"
        style={
          Object {
            "fontSize": "0.8rem",
          }
        }
      >
        <div
          className="figure__UpTo-sc-1fhptnd-1 dJqhYV"
        >
          UP TO
        </div>
        <div
          className="figure__Amount-sc-1fhptnd-2 jVeOqW"
          style={
            Object {
              "color": "#67b1d6",
            }
          }
        >
          $3,520
        </div>
        <figcaption
          className="figure__Subtitle-sc-1fhptnd-3 dUqReg"
        >
          MATCHING 401(k) CONTRIBUTIONS
          <a
            aria-label="Learn more"
            href="https://handbook.sparksuite.com/benefits/401(k).html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i
              className="far fa-info-circle"
            />
          </a>
        </figcaption>
      </figure>
      <p>
        Company matching up to 4%, beginning with your first paycheck. Plus, your savings are invested through an ultra low-fee provider, which could net you hundreds of thousands of dollars more than typical 401(k) plans.
      </p>
    </div>
  </div>
  <div
    className="divider__LineBox-sc-1mhowia-0 cbAUvB"
  >
    <div
      className="divider__Text-sc-1mhowia-1 iWWUCr"
    >
      along with
    </div>
  </div>
  <div
    className="compensation__Perks-sc-1127ja8-2 gRfquL"
  >
    <div>
      <i
        className="far fa-fw fa-sliders-up"
      />
       Flexible working hours
    </div>
    <div>
      <i
        className="far fa-fw fa-house-building"
      />
       Flexible remote work
    </div>
    <div>
      <i
        className="far fa-fw fa-pot-food"
      />
       Free-lunch Fridays
    </div>
    <div>
      <i
        className="far fa-fw fa-taco"
      />
       Taco Tuesdays
    </div>
    <div>
      <i
        className="far fa-fw fa-calendar-day"
      />
       Generous paid time off
    </div>
    <div>
      <i
        className="far fa-fw fa-house-person-return"
      />
       Healthy work-life balance
    </div>
    <div>
      <i
        className="far fa-fw fa-chair-office"
      />
       Incredible office
    </div>
    <div>
      <i
        className="far fa-fw fa-golf-flag-hole"
      />
       Company outings
    </div>
    <div>
      <i
        className="far fa-fw fa-coffee-bean"
      />
       Craft coffee
    </div>
    <div>
      <i
        className="far fa-fw fa-avocado"
      />
       Delicious snacks
    </div>
    <span>
      …and all these other
       
      <a
        href="https://handbook.sparksuite.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        awesome benefits & perks
      </a>
      .
    </span>
  </div>
</div>
`;

exports[`Storyshots Container Normal 1`] = `
<div
  className="container__Container-sc-8aaowj-0 bfnNcc"
/>
`;

exports[`Storyshots Divider Longer 1`] = `
<div
  className="divider__LineBox-sc-1mhowia-0 cbAUvB"
>
  <div
    className="divider__Text-sc-1mhowia-1 iWWUCr"
  >
    a much longer example
  </div>
</div>
`;

exports[`Storyshots Divider Normal 1`] = `
<div
  className="divider__LineBox-sc-1mhowia-0 cbAUvB"
>
  <div
    className="divider__Text-sc-1mhowia-1 iWWUCr"
  >
    example
  </div>
</div>
`;

exports[`Storyshots Figure Basic 1`] = `
<figure
  className="figure__Container-sc-1fhptnd-0 bpKHsn"
  style={
    Object {
      "fontSize": "1rem",
    }
  }
>
  <div
    className="figure__Amount-sc-1fhptnd-2 jVeOqW"
    style={
      Object {
        "color": undefined,
      }
    }
  >
    $123,456
  </div>
  <figcaption
    className="figure__Subtitle-sc-1fhptnd-3 dUqReg"
  >
    EXAMPLE SUBTITLE
  </figcaption>
</figure>
`;

exports[`Storyshots Figure Custom Color 1`] = `
<figure
  className="figure__Container-sc-1fhptnd-0 bpKHsn"
  style={
    Object {
      "fontSize": "1rem",
    }
  }
>
  <div
    className="figure__Amount-sc-1fhptnd-2 jVeOqW"
    style={
      Object {
        "color": "#f00",
      }
    }
  >
    $123,456
  </div>
  <figcaption
    className="figure__Subtitle-sc-1fhptnd-3 dUqReg"
  >
    EXAMPLE SUBTITLE
  </figcaption>
</figure>
`;

exports[`Storyshots Figure Info Icon 1`] = `
<figure
  className="figure__Container-sc-1fhptnd-0 bpKHsn"
  style={
    Object {
      "fontSize": "1rem",
    }
  }
>
  <div
    className="figure__Amount-sc-1fhptnd-2 jVeOqW"
    style={
      Object {
        "color": undefined,
      }
    }
  >
    $123,456
  </div>
  <figcaption
    className="figure__Subtitle-sc-1fhptnd-3 dUqReg"
  >
    EXAMPLE SUBTITLE
    <a
      aria-label="Learn more"
      href="https://www.sparksuite.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="far fa-info-circle"
      />
    </a>
  </figcaption>
</figure>
`;

exports[`Storyshots Figure Smaller 1`] = `
<figure
  className="figure__Container-sc-1fhptnd-0 bpKHsn"
  style={
    Object {
      "fontSize": "0.8rem",
    }
  }
>
  <div
    className="figure__Amount-sc-1fhptnd-2 jVeOqW"
    style={
      Object {
        "color": undefined,
      }
    }
  >
    $123,456
  </div>
  <figcaption
    className="figure__Subtitle-sc-1fhptnd-3 dUqReg"
  >
    EXAMPLE SUBTITLE
  </figcaption>
</figure>
`;

exports[`Storyshots Figure Up To 1`] = `
<figure
  className="figure__Container-sc-1fhptnd-0 bpKHsn"
  style={
    Object {
      "fontSize": "1rem",
    }
  }
>
  <div
    className="figure__UpTo-sc-1fhptnd-1 dJqhYV"
  >
    UP TO
  </div>
  <div
    className="figure__Amount-sc-1fhptnd-2 jVeOqW"
    style={
      Object {
        "color": undefined,
      }
    }
  >
    $123,456
  </div>
  <figcaption
    className="figure__Subtitle-sc-1fhptnd-3 dUqReg"
  >
    EXAMPLE SUBTITLE
  </figcaption>
</figure>
`;

exports[`Storyshots Footer Normal 1`] = `
<footer
  className="footer__Container-j9er38-0 jxyAgA"
>
  <div>
    <a
      href="https://www.sparksuite.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Company website
    </a>
    <a
      href="https://blog.sparksuite.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Blog
    </a>
    <a
      href="https://sparksuite.careers/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Careers
    </a>
    <a
      href="https://handbook.sparksuite.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Employee handbook
    </a>
    <a
      href="https://github.com/sparksuite/salary-calculator"
      rel="noopener noreferrer"
      target="_blank"
    >
      GitHub repo
    </a>
  </div>
  <img
    alt="Sparksuite logo"
    src="/logo.png"
  />
</footer>
`;

exports[`Storyshots Gradient Normal 1`] = `
<div
  className="gradient__Gradient-zihgh-0 hfiInQ"
/>
`;

exports[`Storyshots Header Normal 1`] = `
<header>
  <h1
    className="header__Title-vob98y-0 jcfmoo"
  >
    Sparksuite’s Salary Calculator
  </h1>
  <h2
    className="header__Subtitle-vob98y-1 dpDWMf"
  >
    Transparent, predictable, & holistic compensation
  </h2>
</header>
`;

exports[`Storyshots Position description Normal 1`] = `
<div
  className="container__Container-sc-8aaowj-0 bfnNcc"
>
  A level one front end engineer is usually just beginning their professional career in front end software engineering and is developing a strong foundational knowledge of the fundamentals and familiarity with the technologies they use. They’re capable of completing tasks given to them with some direction and oversight. Reviews typically require more iterations to achieve high quality, intuitive, and polished code contributions.
</div>
`;
